# EnergyClub-Website

./: .gitignore  DOCKERFILE  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
EnergyClub-Website/: package.json
EnergyClub-Website/app/: layout.tsx
EnergyClub-Website/app/team/: page.tsx
app/: layout.tsx  page.tsx
app/events/: page.tsx
app/events.tsx/: page.tsx
app/projects/: page.tsx
app/team/: page.tsx
backend/: .gitignore  add_dummy_data.py  db.sqlite3  manage.py  requirements.txt
backend/energy_club_backend/: .gitignore  asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
backend/energy_club_backend/energy_club_backend/: settings.py  urls.py
backend/energy_club_backend/events/: admin.py  models.py  urls.py  views.py
backend/energy_club_backend/projects/: models.py  urls.py  views.py
backend/energy_club_backend/team/: models.py  urls.py  views.py
backend/env/: pyvenv.cfg
backend/events/: urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_events_created_at.py  0003_alter_events_img.py  0004_rename_events_event.py
backend/projects/: admin.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_alter_project_created_at.py  0003_alter_project_img_alter_project_pdf.py
backend/team/: admin.py  models.py  urls.py  views.py
components/: app-events-page.tsx  app-page.tsx  app-projects-page.tsx  app-team-page.tsx
frontend/: package-lock.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
(+6 files in other folders)
