[project]
name = "energyclub-website"
version = "0.1.0"
description = ""
authors = [
    {name = "hasaan-naurez",email = "166768186+hasaan-naurez@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
